crates/clan/clan-core/tests/snapshots/clan_golden__freqpos_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
  1  cookies               initial =  0, final =  1, other =  0, one word =  0
  1  get                   initial =  0, final =  0, other =  1, one word =  0
  1  i                     initial =  0, final =  0, other =  1, one word =  0
  1  it's                  initial =  1, final =  0, other =  0, one word =  0
  1  mommy                 initial =  1, final =  0, other =  0, one word =  0
  1  them                  initial =  0, final =  1, other =  0, one word =  0
  1  want                  initial =  0, final =  0, other =  1, one word =  0
  1  will                  initial =  0, final =  0, other =  1, one word =  0

Number of words in an initial position =  2
Number of words in an other position   =  4
Number of words in a final position    =  2
Number of one word utterences          =  0
