crates/clan/clan-core/tests/snapshots/clan_golden__gemlist_episodes@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
*** File "pipeout": line 10.
@G:	morning routine
	2 main speaker tier(s).
*** File "pipeout": line 17.
@Bg:	afternoon play
	2 main speaker tier(s).
*** File "pipeout": line 21.
@Eg:	afternoon play
*** File "pipeout": line 22.
@Bg
	1 main speaker tier(s).
*** File "pipeout": line 24.
@Eg
	5 main speaker tier(s).
