crates/clan/clan-core/tests/snapshots/clan_golden__gemlist_episodes@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Gem segments
  Total gems: 1
  Total occurrences: 1
  Total utterances in gems: 2
  Label           Occurrences  Utterances  Speakers
  --------------  -----------  ----------  --------
  afternoon play  1            2           CHI, MOT
