crates/clan/clan-core/tests/snapshots/clan_golden__ipsyn_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Utterances analyzed: 1
  Total IPSYN: 3
  N score: 1
  Q score: 0
  S score: 0
  V score: 2
  Rule  Category  Matches  Points
  ----  --------  -------  ------
  N1    N         1        1     
  V1    V         1        1     
  V4    V         1        1     

Speaker: MOT
  Utterances analyzed: 1
  Total IPSYN: 2
  N score: 0
  Q score: 0
  S score: 0
  V score: 2
  Rule  Category  Matches  Points
  ----  --------  -------  ------
  V1    V         1        1     
  V4    V         1        1
