crates/clan/clan-core/tests/snapshots/clan_golden__ipsyn_speaker_spe@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Utterances analyzed: 2
  Total IPSYN: 7
  N score: 3
  Q score: 0
  S score: 0
  V score: 4
  Rule  Category  Matches  Points
  ----  --------  -------  ------
  N1    N         2        2     
  N2    N         1        1     
  V1    V         2        2     
  V2    V         2        2
