crates/clan/clan-core/tests/snapshots/clan_golden__keymap_coding@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI — Keyword: $NOM
  Total occurrences: 1
  Following Speaker  Following Code  Count
  -----------------  --------------  -----
