crates/clan/clan-core/tests/snapshots/clan_golden__kideval_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: GES
  Metric           Value
  ---------------  -----
  Utterances       3    
  Total words      13   
  NDW              11   
  TTR              0.846
  MLU (words)      4.33 
  MLU (morphemes)  12.00
  DSS score        4.00 
  IPSYN score      8    
  Nouns            0    
  Verbs            4    
  Pronouns         1    
  Word errors      0    

Speaker: SPE
  Metric           Value
  ---------------  -----
  Utterances       2    
  Total words      15   
  NDW              13   
  TTR              0.867
  MLU (words)      7.50 
  MLU (morphemes)  20.50
  DSS score        4.00 
  IPSYN score      7    
  Nouns            0    
  Verbs            4    
  Pronouns         2    
  Word errors      0
