crates/clan/clan-core/tests/snapshots/clan_golden__kideval_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Metric           Value
  ---------------  -----
  Utterances       1    
  Total words      4    
  NDW              4    
  TTR              1.000
  MLU (words)      4.00 
  MLU (morphemes)  6.00 
  DSS score        4.00 
  IPSYN score      3    
  Nouns            0    
  Verbs            1    
  Pronouns         2    
  Word errors      0    

Speaker: MOT
  Metric           Value
  ---------------  -----
  Utterances       1    
  Total words      4    
  NDW              4    
  TTR              1.000
  MLU (words)      4.00 
  MLU (morphemes)  4.00 
  DSS score        3.00 
  IPSYN score      2    
  Nouns            0    
  Verbs            1    
  Pronouns         2    
  Word errors      0
