crates/clan/clan-core/tests/snapshots/clan_golden__kideval_speaker_spe@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
IF YOU DID NOT MARK ERRORS, DSS TOTAL WILL BE INFLATED.
Please be sure to mark utterances with errors with [*] to ensure accurate DSS computation.
