crates/clan/clan-core/tests/snapshots/clan_golden__kideval_speaker_spe@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Metric           Value
  ---------------  -----
  Utterances       2    
  Total words      15   
  NDW              13   
  TTR              0.867
  MLU (words)      7.50 
  MLU (morphemes)  20.50
  DSS score        4.00 
  IPSYN score      7    
  Nouns            0    
  Verbs            4    
  Pronouns         2    
  Word errors      0
