crates/clan/clan-core/tests/snapshots/clan_golden__kwal_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
----------------------------------------
*** File "pipeout": line 8. Keyword: going 
*SPE:	Triangle kept going .
----------------------------------------
*** File "pipeout": line 11. Keyword: going 
*GES:	angle kept going .
